--- a/quiz1/.vscode/settings.json
+++ b/quiz1/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
-    // ...
-    // "eslint.format.enable": true,
-    "editor.codeActionsOnSave": {
-      "source.fixAll.eslint": true
-    }
-  }
+  // ...
+  // "eslint.format.enable": true,
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  },
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.formatOnSave": true
+}
